tests/errors/tc_stmt_return_type.lx
@module "main"

pub const main -> fn () int {
    return "hello";
}
